gcc/testsuite/gdc.test/compilable/test67.d
// PERMUTE_ARGS:

import imports.test67a;

interface I
{
}

interface SubI : I
{
}

