gcc/testsuite/gdc.test/fail_compilation/imports/diag9210c.d
module imports.diag9210c;

import diag9210a;
interface C : A {}
